--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box ;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
     
 }
 
@@ -34,6 +35,7 @@
 
 #item2{
     background-color:red;
+    color: white;
 }
 
 #item3{
