--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -23,10 +23,13 @@
 .food{
     float:right;
     text-align: center;
+    padding: 5px;
     margin-bottom: 20px;
     width: 25%;
-    height: 15%;
+    height: 20%;
     border: 1px solid black;
+    border-top: transparent;
+    border-right: transparent;
 }
 
 #item1{
